--- a/Index.html
+++ b/Index.html
@@ -3,8 +3,13 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="Scripts/angular.js"></script>
+    <script src="AngExternalt.js"></script>
 </head>
-<body>
+<body ng-app="angModule">
+    <div ng-controller="imgController">
+        <img ng-src="{{image}}" />
+    </div>
 
 </body>
 </html>
