--- a/Index.html
+++ b/Index.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
         <a class="navbar-brand" href="#top">Album</a>
     </nav>
-    <div class="row" ng-app="myModule" ng-controller="imgController">
+    <div class="row" ng-controller="imgController">
         <div class="col-md-3" ng-repeat="img in image">
             <img class="img-thumbnail" ng-src="{{ img }}">
         </div>
